--- a/src/Plansza.css
+++ b/src/Plansza.css
@@ -18,4 +18,11 @@ button:hover {
     height: 20px;
     width: 300px;
     margin-left: 20px;
+    border: 1px solid black;
+}
+
+#Blok2 {
+    height: 20px;
+    width: 200px;
+    background-color: aquamarine;
 }
