--- a/src/Plansza.css
+++ b/src/Plansza.css
@@ -1,3 +1,4 @@
+
 button {
     margin-top: 5px;
     border: none;
@@ -10,19 +11,20 @@ button:hover {
 
 
 .Post {
-    margin: 10px;
+    margin: 30px
 }
 
 
 .Blok {
     height: 20px;
     width: 300px;
-    margin-left: 20px;
     border: 1px solid black;
+    background-color: lightcoral;
+    margin: auto;
 }
 
-#Blok2 {
+.Blok div {
     height: 20px;
-    width: 200px;
+    width: 50%;
     background-color: aquamarine;
 }
